syntax = "proto3";

option go_package = ".;api";

package hammer.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Hammer {
  // Create a new topic
  rpc CreateTopic(CreateTopicRequest) returns (Topic) {
    option (google.api.http) = {
      post: "/v1/topics",
      body: "*"
    };
  }
  // Gets the topic
  rpc GetTopic(GetTopicRequest) returns (Topic) {
    option (google.api.http) = {
      get: "/v1/topics/{id}"
    };
  }
  // List topics
  rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse) {
    option (google.api.http) = {
      get: "/v1/topics"
    };
  }
  // Create a new subscription
  rpc CreateSubscription(CreateSubscriptionRequest) returns (Subscription) {
    option (google.api.http) = {
      post: "/v1/subscriptions",
      body: "*"
    };
  }
  // Gets the subscription
  rpc GetSubscription(GetSubscriptionRequest) returns (Subscription) {
    option (google.api.http) = {
      get: "/v1/subscriptions/{id}"
    };
  }
  // List subscriptions
  rpc ListSubscriptions(ListSubscriptionsRequest) returns (ListSubscriptionsResponse) {
    option (google.api.http) = {
      get: "/v1/subscriptions"
    };
  }
  // Create a new message
  rpc CreateMessage(CreateMessageRequest) returns (Message) {
    option (google.api.http) = {
      post: "/v1/messages",
      body: "*"
    };
  }
  // Gets the message
  rpc GetMessage(GetMessageRequest) returns (Message) {
    option (google.api.http) = {
      get: "/v1/messages/{id}"
    };
  }
  // List messages
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse) {
    option (google.api.http) = {
      get: "/v1/messages"
    };
  }
  // Gets the delivery
  rpc GetDelivery(GetDeliveryRequest) returns (Delivery) {
    option (google.api.http) = {
      get: "/v1/deliveries/{id}"
    };
  }
  // List deliveires
  rpc ListDeliveries(ListDeliveriesRequest) returns (ListDeliveriesResponse) {
    option (google.api.http) = {
      get: "/v1/deliveries"
    };
  }
  // Gets the delivery attempt
  rpc GetDeliveryAttempt(GetDeliveryAttemptRequest) returns (DeliveryAttempt) {
    option (google.api.http) = {
      get: "/v1/delivery-attempts/{id}"
    };
  }
  // List deliveiry attempts
  rpc ListDeliveryAttempts(ListDeliveryAttemptsRequest) returns (ListDeliveryAttemptsResponse) {
    option (google.api.http) = {
      get: "/v1/delivery-attempts"
    };
  }
}

// A topic resource
message Topic {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// Request for the GetTopic method
message GetTopicRequest {
  string id = 1;
}

// Request for the CreateTopic method
message CreateTopicRequest {
  Topic topic = 1;
}

// Request for list topics
message ListTopicsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

// Response for list topics
message ListTopicsResponse {
  repeated Topic topics = 1;
}

// A subscription resource
message Subscription {
  string id = 1;
  string topic_id = 2;
  string name = 3;
  string url = 4;
  string secret_token = 5;
  uint32 max_delivery_attempts = 6;
  uint32 delivery_attempt_delay = 7;
  uint32 delivery_attempt_timeout = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// Request for the GetSubscription method
message GetSubscriptionRequest {
  string id = 1;
}

// Request for the CreateSubscription method
message CreateSubscriptionRequest {
  Subscription subscription = 1;
}

// Request for list subscriptions
message ListSubscriptionsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

// Response for list topics
message ListSubscriptionsResponse {
  repeated Subscription subscriptions = 1;
}

// A message resource
message Message {
  string id = 1;
  string topic_id = 2;
  string data = 3;
  google.protobuf.Timestamp created_at = 4;
}

// Request for the GetMessage method
message GetMessageRequest {
  string id = 1;
}

// Request for the CreateMessage method
message CreateMessageRequest {
  Message message = 1;
}

// Request for list messages
message ListMessagesRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string topic_id = 3;
}

// Response for list messages
message ListMessagesResponse {
  repeated Message messages = 1;
}

// A delivery resource
message Delivery {
  string id = 1;
  string topic_id = 2;
  string subscription_id = 3;
  string message_id = 4;
  string data = 5;
  string url = 6;
  string secret_token = 7;
  uint32 max_delivery_attempts = 8;
  uint32 delivery_attempt_delay = 9;
  uint32 delivery_attempt_timeout = 10;
  google.protobuf.Timestamp scheduled_at = 11;
  uint32 delivery_attempts = 12;
  string status = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
}

// Request for the GetDelivery method
message GetDeliveryRequest {
  string id = 1;
}

// Request for list deliveries
message ListDeliveriesRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string topic_id = 3;
  string subscription_id = 4;
  string message_id = 5;
  string status = 6;
}

// Response for list messages
message ListDeliveriesResponse {
  repeated Delivery deliveries = 1;
}

// A delivery attempt resource
message DeliveryAttempt {
  string id = 1;
  string delivery_id = 2;
  string request = 3;
  string response = 4;
  uint32 response_status_code = 5;
  uint32 execution_duration = 6;
  bool success = 7;
  string error = 8;
  google.protobuf.Timestamp created_at = 9;
}

// Request for the GetDeliveryAttempt method
message GetDeliveryAttemptRequest {
  string id = 1;
}

// Request for list delivery attempts
message ListDeliveryAttemptsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string delivery_id = 3;
}

// Response for list delivery attempts
message ListDeliveryAttemptsResponse {
  repeated DeliveryAttempt delivery_attempts = 1;
}
